# lwevt

./: AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  library.json
dev/: lwevt_dev.sln  lwevt_dev.vcxproj  lwevt_dev.vcxproj.filters  lwevt_opts.h  lwevt_types.h  main.c
docs/: conf.py  doxyfile.doxy  index.rst
docs/api-reference/: index.rst  lwevt.rst  lwevt_opt.rst
docs/get-started/: index.rst
docs/user-manual/: index.rst
examples/: example_basic_consumer.c  example_basic_producer.c  example_basic_producer_local.c  lwevt_types.h
lwevt/: CMakeLists.txt  library.cmake
lwevt/src/include/lwevt/: lwevt.h  lwevt_opt.h  lwevt_opts_template.h  lwevt_type.h  lwevt_types_template.h
lwevt/src/lwevt/: lwevt.c
